[package]
name = "rusting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

chrono = "0.4.26"

tokio = { version = "1.27.0", features = ["full"] }

futures = "0.3.28"

schnorrkel = "0.10.2"

serde_json = "1.0.100"
serde = "1.0.100"
serde_derive = "1.0.100"

flate2 = "1.0.26"

tokio-core = "0.1.18"

sha2 = "0.10.6"
rs_merkle = "1.4.1"

reed-solomon = "0.2.1"

async-recursion = "1.0.4"

hex = "0.4.3"
