[package]
name = "rusting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

chrono = "0.4.26"

tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
bincode = "1.3.3"
bytes = "1.0.1"
futures = "0.3.28"
serde_json = "1.0.104"
schnorrkel = "0.10.2"

serde = { version = "1.0", features = ["derive"] }


data-encoding = "2.3"

tokio-core = "0.1.18"

sha2 = "0.10.6"
rs_merkle = "1.4.1"

reed-solomon-erasure = "6.0.0"

async-recursion = "1.0.4"

hex = "0.4.3"

optrand_pvss = {git="https://github.com/DimitrisPapac/Optrand-PVSS.git"}

sha3 = "0.10.8"

ark-bls12-381 = { version = "^0.2.0", features = [ "std" ] }
ark-ec = { version = "^0.2.0", features = [ "std" ] }
ark-ff = { version = "^0.2.0", features = [ "std" ] }
ark-serialize = { version = "^0.2.0", features = [ "std" ] }
ark-std = { version = "^0.2.0", features = [ "std" ] }